--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,8 +2,8 @@
 {%set version = "5.4.0" %}
 {%set compress_type = "tar.gz" %}
 {%set hash_type = "sha256" %}
-{%set hash_val = "f4b3d2eaa949b8a2f6676e3bca7c68cd358e4aa6bab437362b4bee6781626135" %}
-{%set build_num = "0" %}
+{%set hash = "f4b3d2eaa949b8a2f6676e3bca7c68cd358e4aa6bab437362b4bee6781626135" %}
+{%set build = 0 %}
 
 package:
   name: {{ name|lower }}
@@ -12,17 +12,17 @@ package:
 source:
   fn: {{ name|lower }}-{{ version }}.{{ compress_type }}
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name|lower }}-{{ version }}.{{ compress_type }}
-  {{ hash_type }}: {{ hash_val }}
+  {{ hash_type }}: {{ hash }}
 
 build:
-  number: {{ build_num }}
+  number: {{ build }}
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
     - python
     - setuptools
-    - setuptools_scm
+    - setuptools_scm >=1.15.0
 
   run:
     - python
