more_itertools -> more-itertools

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
   run:
     - python
     - six >=1.11.0
-    - more_itertools >=2.6
+    - more-itertools >=2.6
 
 test:
   imports:
