--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,7 +3,6 @@
 {% set bundle = "tar.gz" %}
 {% set hash_type = "sha256" %}
 {% set hash = "004e7dcde3bfc01e284385254231a283ee444357c727e0111d87d2ec9e1fd15c" %}
-{% set build = 0 %}
 
 package:
   name: {{ name|lower }}
@@ -11,18 +10,17 @@ package:
 
 source:
   fn: {{ name|lower }}-{{ version }}.{{ bundle }}
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name|lower }}-{{ version }}.{{ bundle }}
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name|lower }}-{{ version }}.{{ bundle }}
   {{ hash_type }}: {{ hash }}
 
 build:
   number: 0
-  script: python setup.py install --single-version-externally-managed --record=record.txt
-  noarch: python
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
     - python
-    - setuptools
+    - pip
     - setuptools_scm >=1.15.0
     - setuptools_scm_git_archive >=1.0
 
@@ -30,6 +28,7 @@ requirements:
     - python
     - six >=1.11.0
     - more-itertools >=2.6
+    - backports.functools_lru_cache  # [py2k]
 
 test:
   imports:
