--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
   {{ hash_type }}: {{ hash }}
 
 build:
+  noarch: python
   number: 0
   script: python -m pip install --no-deps --ignore-installed .
 
@@ -28,7 +29,7 @@ requirements:
     - python
     - six >=1.11.0
     - more-itertools >=2.6
-    - backports.functools_lru_cache  # [py2k]
+    - backports.functools_lru_cache
 
 test:
   imports:
