--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,7 @@ requirements:
     - six >=1.11.0
     - more-itertools >=2.6
     - backports.functools_lru_cache  # [py<33]
+    - jaraco.functools
 
 test:
   imports:
